feat(Naav): Add naav filters
